--- a/style.css
+++ b/style.css
@@ -44,3 +44,25 @@ img{
     float: left;
     margin-right: 1rem;
 }
+.container{
+    width: 800px;
+    padding: 20px;
+    margin: 0 auto;
+    background-color: gray;
+    display: flex;
+    gap: 2rem;
+}
+.box{
+width: 150px;
+height: 150px;
+border-radius: 5px;
+}
+.red{
+    background-color: red;
+}
+.blue{
+    background-color: blue;
+}
+.green{
+    background-color: green;
+}
